--- a/samples/GalleryApp/Pages/ObjectDetectorPage.xaml
+++ b/samples/GalleryApp/Pages/ObjectDetectorPage.xaml
@@ -43,8 +43,8 @@
                                  HorizontalAlignment="Center"
                                  NavigateUri="https://github.com/microsoft/WindowsVisionSkillsPreview/tree/master/samples/ObjectDetector">
                     <Image Source="../../Assets/GitHub-Mark-32px.png" 
-                            Width="32"
-                            Height="32"/>
+                            Width="45"
+                            Height="45"/>
                 </HyperlinkButton>
                 <TextBlock Text="Object Detector" Grid.Row="1" Grid.Column="1"
                            HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource HeaderTextBlockStyle}" />
@@ -52,7 +52,7 @@
 
             <!--Skill output area-->
             <Grid Grid.Row="1" Loaded="Page_Loaded">
-                <Grid Grid.Row="1" Name="UIVideoFeed">
+                <Grid Name="UIVideoFeed" Background="#FFF2F2F2">
                     <!-- Video frame source controls -->
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Background="#B2000000">
                         <AppBarButton x:Name="UICameraButton" Icon="AttachCamera" Label="Attach Camera" 
@@ -65,7 +65,22 @@
                     <Image x:Name="UIProcessedPreview" Canvas.ZIndex="-1"  VerticalAlignment="Center" Stretch="Uniform" SizeChanged="UIProcessedPreview_SizeChanged" />
                     <Canvas Name="UIOverlayCanvas" Canvas.ZIndex="0" HorizontalAlignment="Center" VerticalAlignment="Center" />
 
-                    <TextBox Name="UIPerfTextBlock" HorizontalAlignment="Center" IsReadOnly="True" AcceptsReturn="True" VerticalAlignment="Bottom"/>
+                    <Grid VerticalAlignment="Bottom">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="100"/>
+                        </Grid.ColumnDefinitions>
+
+                        <TextBox Name="UIPerfTextBlock" Text="Skill output var description" IsReadOnly="True" AcceptsReturn="True"
+                                 Grid.Column="0"/>
+                        <!--progress bar to indicate skill status-->
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="10" Grid.Column="1">
+                            <Ellipse x:Name="BindSkillIndicator" Width="20" Height="20" Stroke="{StaticResource SystemBaseMediumLowColor}" 
+                                       StrokeThickness="2" Fill="{x:Bind BindSkillIndicatorColor, Mode=OneWay}"/>
+                            <Ellipse x:Name="EvaluateSkillIndicator" Width="20" Height="20" Stroke="{StaticResource SystemBaseMediumLowColor}" 
+                                       StrokeThickness="2" Fill="{x:Bind EvaluateSkillIndicatorColor, Mode=OneWay}"/>
+                        </StackPanel>
+                    </Grid>
                 </Grid>
             </Grid>
         </Grid>
@@ -78,29 +93,16 @@
                 <RowDefinition Height="85*"/>
             </Grid.RowDefinitions>
 
-            <Grid Grid.Row="0" >
-                <TextBlock Text="Properties" HorizontalAlignment="Center" 
-                           VerticalAlignment="Bottom" Style="{StaticResource SubheaderTextBlockStyle}" />
+            <TextBlock Text="Properties" HorizontalAlignment="Center" Grid.Row="0" 
+                       VerticalAlignment="Bottom" Style="{StaticResource SubheaderTextBlockStyle}" />
 
-            </Grid>
-
-            <Grid Grid.Row="1" Padding="16, 0, 0, 0" HorizontalAlignment="Center">
-                <Border BorderBrush="#66000000" BorderThickness="2">
-                    <StackPanel>
-                        <TextBlock Text="Status" TextDecorations="Underline" Style="{StaticResource TitleTextBlockStyle}" HorizontalAlignment="Center"/>
-                        <TextBlock Name="UIMessageTextBlock" Text="{x:Bind UIMessageTextBlockText, Mode=OneWay}"
+            <Border Grid.Row="1" Margin="16, 0, 0, 0" BorderBrush="#66000000" BorderThickness="2" >
+                <StackPanel>
+                    <TextBlock Text="Status" TextDecorations="Underline" Style="{StaticResource TitleTextBlockStyle}" HorizontalAlignment="Center"/>
+                    <TextBlock Name="UIMessageTextBlock" Text="{x:Bind UIMessageTextBlockText, Mode=OneWay}"
                                    HorizontalAlignment="Center" TextWrapping="Wrap"/>
-                        
-                        <!--progress bar to indicate skill status-->
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="10">
-                            <Rectangle x:Name="BindSkillIndicator" Width="20" Height="20" Stroke="{StaticResource SystemBaseMediumLowColor}" 
-                                       StrokeThickness="2" Fill="{x:Bind BindSkillIndicatorColor, Mode=OneWay}"/>
-                            <Rectangle x:Name="EvaluateSkillIndicator" Width="20" Height="20" Stroke="{StaticResource SystemBaseMediumLowColor}" 
-                                       StrokeThickness="2" Fill="{x:Bind EvaluateSkillIndicatorColor, Mode=OneWay}"/>
-                        </StackPanel>
-                    </StackPanel>
-                </Border>
-            </Grid>
+                </StackPanel>
+            </Border>
 
             <Grid Grid.Row="2" Padding="16, 0, 0, 0" Background="#FFF2F2F2">
                 <ScrollViewer>
