--- a/samples/GalleryApp/Pages/ObjectDetectorPage.xaml
+++ b/samples/GalleryApp/Pages/ObjectDetectorPage.xaml
@@ -76,9 +76,9 @@
                         <!--progress bar to indicate skill status-->
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="10" Grid.Column="1">
                             <Ellipse x:Name="BindSkillIndicator" Width="20" Height="20" Stroke="{StaticResource SystemBaseMediumLowColor}" 
-                                       StrokeThickness="2" Fill="{x:Bind BindSkillIndicatorColor, Mode=OneWay}"/>
+                                       StrokeThickness="2" Fill="{x:Bind IndicatorColorList[0], Mode=OneWay}"/>
                             <Ellipse x:Name="EvaluateSkillIndicator" Width="20" Height="20" Stroke="{StaticResource SystemBaseMediumLowColor}" 
-                                       StrokeThickness="2" Fill="{x:Bind EvaluateSkillIndicatorColor, Mode=OneWay}"/>
+                                       StrokeThickness="2" Fill="{x:Bind IndicatorColorList[1], Mode=OneWay}"/>
                         </StackPanel>
                     </Grid>
                 </Grid>
