--- a/samples/GalleryApp/Pages/ObjectDetectorPage.xaml
+++ b/samples/GalleryApp/Pages/ObjectDetectorPage.xaml
@@ -68,17 +68,22 @@
                     <Grid VerticalAlignment="Bottom">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
-                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="150"/>
                         </Grid.ColumnDefinitions>
 
                         <TextBox Name="UIPerfTextBlock" Text="Skill output var description" IsReadOnly="True" AcceptsReturn="True"
                                  Grid.Column="0"/>
                         <!--progress bar to indicate skill status-->
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Spacing="10" Grid.Column="1">
-                            <Ellipse x:Name="UIBindSkillIndicator" Width="20" Height="20" Stroke="{StaticResource SystemBaseMediumLowColor}" 
-                                       StrokeThickness="2" Fill="{x:Bind IndicatorColorList[0], Mode=OneWay}"/>
-                            <Ellipse x:Name="UIEvaluateSkillIndicator" Width="20" Height="20" Stroke="{StaticResource SystemBaseMediumLowColor}" 
-                                       StrokeThickness="2" Fill="{x:Bind IndicatorColorList[1], Mode=OneWay}"/>
+                            <!--IndicatorsList indexes: 0 = Indicator.Initialization, 1 = Indicator.Binding, 2 = Indicator.Evaluating, 3 = Indicator.Done-->
+                            <Ellipse x:Name="UIIndicator_Initialization" Width="20" Height="20" Stroke="{StaticResource SystemBaseMediumLowColor}" 
+                                       StrokeThickness="2" Fill="{x:Bind IndicatorsList[0], Mode=OneWay}"/>
+                            <Ellipse x:Name="UIIndicator_Binding" Width="20" Height="20" Stroke="{StaticResource SystemBaseMediumLowColor}" 
+                                       StrokeThickness="2" Fill="{x:Bind IndicatorsList[1], Mode=OneWay}"/>
+                            <Ellipse x:Name="UIIndicator_Evaluating" Width="20" Height="20" Stroke="{StaticResource SystemBaseMediumLowColor}" 
+                                       StrokeThickness="2" Fill="{x:Bind IndicatorsList[2], Mode=OneWay}"/>
+                            <Ellipse x:Name="UIIndicator_Done" Width="20" Height="20" Stroke="{StaticResource SystemBaseMediumLowColor}" 
+                                       StrokeThickness="2" Fill="{x:Bind IndicatorsList[3], Mode=OneWay}"/>
                         </StackPanel>
                     </Grid>
                 </Grid>
