adding documentation for code walkthrough and image examples correcting some comments and headers

--- a/samples/ImageScanning/cs/ImageScanningSample_UWP/CustomControls/CurvedEdgesDetectorInteractiveControl.xaml
+++ b/samples/ImageScanning/cs/ImageScanningSample_UWP/CustomControls/CurvedEdgesDetectorInteractiveControl.xaml
@@ -14,6 +14,7 @@
         <controls:Expander Header="Input values" IsExpanded="True">
 
             <StackPanel>
+                <TextBlock Text="Input Quad:" />
                 <StackPanel Orientation="Horizontal" >
                     <TextBlock Text="X: " />
                     <TextBox Name="UITopLeftBaseQuadCornerX" IsReadOnly="True" IsEnabled="False"/>
