- fix readability issue with dark theme in uwp app - remove specifying the certificate for the uwp app - remove deprecated line of code

--- a/samples/ConceptTagger/cs/ConceptTaggerSample_UWP/MainPage.xaml
+++ b/samples/ConceptTagger/cs/ConceptTaggerSample_UWP/MainPage.xaml
@@ -61,6 +61,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                                Header="Details and options.."
                                HorizontalContentAlignment="Stretch"
                                Foreground="Black"
+                               Background="#FF7F7F7F"
                                BorderBrush="Black"
                                ExpandDirection="Down"
                                IsExpanded="False">
@@ -69,6 +70,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                                        Header="Skill Information"
                                        HorizontalContentAlignment="Stretch"
                                        Foreground="Black"
+                                       Background="#FF7F7F7F"
                                        BorderBrush="Black"
                                        ExpandDirection="Down"
                                        IsExpanded="False"
@@ -80,6 +82,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                                        Header="Skill inputf feature descriptions"
                                        HorizontalContentAlignment="Stretch"
                                        Foreground="Black"
+                                       Background="#FF7F7F7F"
                                        BorderBrush="Black"
                                        ExpandDirection="Down"
                                        IsExpanded="False" 
@@ -91,6 +94,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                                        Header="Skill output feature descriptions"
                                        HorizontalContentAlignment="Stretch"
                                        Foreground="Black"
+                                       Background="#FF7F7F7F"
                                        BorderBrush="Black"
                                        ExpandDirection="Down"
                                        IsExpanded="False" 
@@ -102,6 +106,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                                        Header="Available execution device selected"
                                        HorizontalContentAlignment="Stretch"
                                        Foreground="Black"
+                                       Background="#FF7F7F7F"
                                        BorderBrush="Black"
                                        ExpandDirection="Down"
                                        IsExpanded="False" 
