--- a/samples/ImageScanning/cs/ImageScanningSample_UWP/CustomControls/ImageRectifierInteractiveControl.xaml
+++ b/samples/ImageScanning/cs/ImageScanningSample_UWP/CustomControls/ImageRectifierInteractiveControl.xaml
@@ -12,7 +12,7 @@
     Loaded="UserControl_Loaded">
 
     <StackPanel Orientation="Horizontal">
-        <controls:Expander Header="Input values" IsExpanded="True">
+        <controls:Expander Header="Input values" IsExpanded="True" Background="#FF7F7F7F">
             <StackPanel>
                 <TextBlock Text="Interpolation type" />
                 <ComboBox Name="UIInterpolationType" SelectionChanged="UIInterpolationType_SelectionChanged"/>
@@ -43,7 +43,7 @@
                 </StackPanel>
             </StackPanel>
         </controls:Expander>
-        <controls:Expander Header="Output values" IsExpanded="True">
+        <controls:Expander Header="Output values" IsExpanded="True" Background="#FF7F7F7F">
             <StackPanel>
                 <Grid>
                     <Image Name="UIResultImage" MaxWidth="400" MaxHeight="400" Stretch="Uniform"/>
