--- a/samples/ImageScanning/cs/ImageScanningSample_UWP/MainPage.xaml
+++ b/samples/ImageScanning/cs/ImageScanningSample_UWP/MainPage.xaml
@@ -70,6 +70,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                                        Header="Skill Information"
                                        HorizontalContentAlignment="Stretch"
                                        Foreground="Black"
+                                       Background="#FF7F7F7F"
                                        BorderBrush="Black"
                                        ExpandDirection="Down"
                                        IsExpanded="False"
@@ -84,6 +85,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                                        Header="Skill input feature descriptions"
                                        HorizontalContentAlignment="Stretch"
                                        Foreground="Black"
+                                       Background="#FF7F7F7F"
                                        BorderBrush="Black"
                                        ExpandDirection="Down"
                                        IsExpanded="False" 
@@ -104,6 +106,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                                        Header="Skill output feature descriptions"
                                        HorizontalContentAlignment="Stretch"
                                        Foreground="Black"
+                                       Background="#FF7F7F7F"
                                        BorderBrush="Black"
                                        ExpandDirection="Down"
                                        IsExpanded="False" 
@@ -175,6 +178,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
                                        Header="Available execution device selected"
                                        HorizontalContentAlignment="Stretch"
                                        Foreground="Black"
+                                       Background="#FF7F7F7F"
                                        BorderBrush="Black"
                                        ExpandDirection="Down"
                                        IsExpanded="False" 
