--- a/samples/ImageScanning/cs/ImageScanningSample_UWP/CustomControls/ImageCleanerInteractiveControl.xaml
+++ b/samples/ImageScanning/cs/ImageScanningSample_UWP/CustomControls/ImageCleanerInteractiveControl.xaml
@@ -1,4 +1,13 @@
-﻿<UserControl
+﻿<!--
+*@@@+++@@@@******************************************************************
+
+Microsoft Windows Media Foundation
+Copyright (C) Microsoft Corporation. All rights reserved.
+
+*@@@+++@@@@******************************************************************
+-->
+    
+<UserControl
     x:Class="ImageScanningSample.ImageCleanerInteractiveControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
