--- a/samples/ChainedSkills/cs/ChainedSkillsSample_UWP/App.xaml
+++ b/samples/ChainedSkills/cs/ChainedSkillsSample_UWP/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application
-    x:Class="ChainedSkillsSample.App"
+    x:Class="DetectAndTrackObjectsSample.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ChainedSkillsSample">
+    xmlns:local="using:DetectAndTrackObjectsSample">
 
 </Application>
