--- a/samples/ChainedSkills/cs/ChainedSkillsSample_UWP/MainPage.xaml
+++ b/samples/ChainedSkills/cs/ChainedSkillsSample_UWP/MainPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="ChainedSkillsSample.MainPage"
+    x:Class="DetectAndTrackObjectsSample.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ChainedSkillsSample"
+    xmlns:local="using:DetectAndTrackObjectsSample"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -27,17 +27,33 @@
                                ExpandDirection="Down"
                                Expanded="UIExpander_Expanded"
                                Collapsed="UIExpander_Expanded">
-                    <StackPanel>
-                        <TextBlock Name="UISkillName" Text="Skill name" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold"/>
-                        <TextBlock Text="Skill Description:" FontWeight="Bold"/>
+                    <StackPanel Padding="5">
+                        <TextBlock Text="Skill Descriptions:" FontWeight="Bold"/>
                         <TextBox Name="UISkillDescription" IsReadOnly="True" AcceptsReturn="True"/>
-                        <TextBlock Text="Skill input descriptions:" FontWeight="Bold" FontFamily="Segoe UI"/>
-                        <TextBox Name="UISkillInputDescription" IsReadOnly="True" AcceptsReturn="True"/>
-                        <TextBlock Text="Skill output descriptions:" FontWeight="Bold"/>
-                        <TextBox Name="UISkillOutputDescription" IsReadOnly="True" AcceptsReturn="True"/>
-                        <TextBlock Text="Available execution devices:" FontWeight="Bold"/>
-                        <ListBox Name="UISkillExecutionDevices" SelectionChanged="UISkillExecutionDevices_SelectionChanged"/>
-                        <ListView Name="UIObjectKindFilters" SelectionMode="Multiple" ScrollViewer.VerticalScrollBarVisibility="Visible" SelectionChanged="UIObjectKindFilters_SelectionChanged" />
+                        <TextBlock Text="Available ObjectDetector execution devices:" FontWeight="Bold"/>
+                        <ListBox Name="UIDetectorExecutionDevices" SelectionChanged="UIDetectorExecutionDevices_SelectionChanged"/>
+                        <TextBlock Text="Available ObjectTracker execution devices:" FontWeight="Bold"/>
+                        <ListBox Name="UITrackerExecutionDevices" SelectionChanged="UITrackerExecutionDevices_SelectionChanged"/>
+                        <controls:Expander VerticalAlignment="Top"
+                               Header="Object Detector ObjectKind Filters"
+                               HorizontalContentAlignment="Stretch"
+                               Foreground="Black"
+                               Background="#FF7F7F7F"
+                               BorderBrush="Black"
+                               BorderThickness="1"
+                               Margin="0,5"
+                               IsExpanded="False"
+                               ExpandDirection="Down"
+                               Expanded="UIExpander_Expanded"
+                               Collapsed="UIExpander_Expanded">
+                            <ListView Name="UIObjectKindFilters" SelectionMode="Multiple" ScrollViewer.VerticalScrollBarVisibility="Visible" SelectionChanged="UIObjectKindFilters_SelectionChanged" />
+                        </controls:Expander>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBox Width="200" Margin="0,0,5,0" Header="Detector Evaluation Interval" TextChanging="ValidateNumericalTextBoxEntry" Name="UIDetectorIntervalBox" />
+                            <TextBox Width="200" Margin="0,0,5,0" Header="Max Active Trackers" TextChanging="ValidateNumericalTextBoxEntry" Name="UIMaxTrackersBox" />
+                            <TextBox Width="200" Margin="0,0,5,0" Header="Max Tracker History Duration" TextChanging="ValidateNumericalTextBoxEntry" Name="UIMaxTrackerHistoryBox" />
+                            <Button VerticalAlignment="Bottom"  Content="Apply" Click="UIApplySettingsButton_Click" />
+                        </StackPanel>
                     </StackPanel>
                 </controls:Expander>
 
@@ -47,9 +63,9 @@
 
         <Grid Grid.Row="1" Name="UIVideoFeed">
             <!-- Video frame source controls -->
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Background="#B2000000">
-                <AppBarButton x:Name="UICameraButton" Icon="AttachCamera" Label="Attach Camera" Click="UICameraButton_Click" Foreground="White" />
-                <AppBarButton x:Name="UIFilePickerButton" Icon="BrowsePhotos" Label="Open File" ToolTipService.ToolTip="Load an image or video file from disk" Click="UIFilePickerButton_Click" Foreground="White" />
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Background="White">
+                <AppBarButton x:Name="UICameraButton" Icon="AttachCamera" Label="Camera" Click="UICameraButton_Click" />
+                <AppBarButton x:Name="UIFilePickerButton" Icon="BrowsePhotos" Label="Open Video" ToolTipService.ToolTip="Load a video file from disk" Click="UIFilePickerButton_Click" />
             </StackPanel>
             
             <!-- Video display -->
