adding common resource dictionary to simplify mainpage xaml code

--- a/samples/ObjectDetector/cs/ObjectDetectorSample_UWP/MainPage.xaml
+++ b/samples/ObjectDetector/cs/ObjectDetectorSample_UWP/MainPage.xaml
@@ -74,6 +74,7 @@
                                    ExpandDirection="Down"
                                    IsExpanded="False"
                                    IsEnabled="False"
+                                   Visibility="Collapsed"
                                    Style="{StaticResource ResourceKey=UISubExpanderStyle}">
 
                     <ListView Name="UIObjectKindFilters" 
